<resources>
    <string name="app_name">DownloadCoRoutines</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="collections">Collections</string>
    <string name="categories">Categories</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="submit">Submit</string>
    <string name="search">Search</string>
    <string name="about">About This App</string>
    <string name="disclaimer">This app was just made out for practise and code is purely written in kotlin, if you like my work and want the source code you can get the code from github. If you any Ideas on how can I improve this app Further please feel free to tell me. Thanks</string>
    <string name="contact_me">Contact Me</string>
    <string name="more_by_the_author">More By the Author:</string>
    <string name="set_wallpaper">Set Wallpaper</string>
    <string name="download">Download</string>
</resources>