<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_50"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.MainActivity">

        <com.airbnb.lottie.LottieAnimationView
            android:id="@+id/animeHeaderInfo"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@id/cardContainer"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:lottie_autoPlay="true"
            app:lottie_loop="true" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardContainer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="-10dp"
            android:layout_marginBottom="-10dp"
            android:elevation="@dimen/_10sdp"
            app:cardCornerRadius="@dimen/_20sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/animeHeaderHome">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/tvAboutLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/comic"
                    android:text="@string/about"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tvAboutDetail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/comic"
                    android:text="@string/disclaimer"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAboutLabel" />

                <TextView
                    android:id="@+id/tvContactLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10sdp"
                    android:fontFamily="@font/comic"
                    android:text="@string/contact_me"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvAboutDetail" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animeLinkedIn"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintRight_toLeftOf="@id/animeFacebook"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tvContactLabel"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animeFacebook"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintRight_toLeftOf="@id/animeInstagram"
                    app:layout_constraintLeft_toRightOf="@id/animeLinkedIn"
                    app:layout_constraintTop_toBottomOf="@id/tvContactLabel"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true" />

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/animeInstagram"
                    android:layout_width="@dimen/_50sdp"
                    android:layout_height="@dimen/_50sdp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginTop="@dimen/_10sdp"
                    app:layout_constraintLeft_toRightOf="@id/animeFacebook"
                    app:layout_constraintTop_toBottomOf="@id/tvContactLabel"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
