<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/nestedHome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:background="@color/gray_light">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".ui.MainActivity">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animeProfile"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toTopOf="@id/cardContainer"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginHorizontal="@dimen/_5sdp"
                android:layout_marginTop="-10dp"
                android:elevation="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_20sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/animeProfile">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/imageProfile"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:visibility="gone"
                        app:layout_constraintBottom_toTopOf="@id/tvName"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.airbnb.lottie.LottieAnimationView
                        android:id="@+id/animeProfilePic"
                        android:layout_width="@dimen/_80sdp"
                        android:layout_height="@dimen/_80sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:scaleType="centerCrop"
                        app:layout_constraintBottom_toTopOf="@id/tvName"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:lottie_autoPlay="true"
                        app:lottie_loop="true" />

                    <ImageView
                        android:id="@+id/imageCamera"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_baseline_camera_alt_24"
                        app:layout_constraintBottom_toBottomOf="@id/animeProfilePic"
                        app:layout_constraintRight_toRightOf="@id/animeProfilePic" />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:fontFamily="@font/comic"
                        android:text="@string/name"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/edName"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/animeProfilePic" />

                    <EditText
                        android:id="@+id/edName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:fontFamily="@font/comic"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvName"
                        app:layout_constraintBottom_toTopOf="@id/tvEmail"/>

                    <TextView
                        android:id="@+id/tvEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:text="@string/email"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/edEmail"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/edName" />

                    <EditText
                        android:id="@+id/edEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tvEmail"
                        app:layout_constraintBottom_toTopOf="@id/tvMobile"/>


                    <TextView
                        android:id="@+id/tvMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginVertical="@dimen/_10sdp"
                        android:text="@string/mobile_number"
                        android:textSize="@dimen/_12sdp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/edMobile"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/edEmail" />

                    <EditText
                        android:id="@+id/edMobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        android:layout_marginBottom="@dimen/_10sdp"
                        app:layout_constraintTop_toBottomOf="@id/tvMobile" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>

